modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: My blogs
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: Mo Cong
 language: en
 timezone: ''
 
